--- a/site_institucional/estilos.css
+++ b/site_institucional/estilos.css
@@ -4,7 +4,7 @@
     color: #f1f1f1;
 }
 
-.header {
+header {
     padding: 15px;
     border-bottom: 3px solid #32b9cd;
     background-color: black;
@@ -73,10 +73,28 @@ li {
 
 .caixa p{
     text-align: center;
-    /* width: 200px; */
     color: #000000;
 }
 
 .caixa img{
     width: 170px;
+}
+
+footer{
+    padding: 45px 0;
+    background-color: #32b9cd;
+}
+
+footer .container{
+    justify-content: center;
+}
+
+footer p {
+    color: #ffffff;
+}
+
+li a{
+    color:#e3b062;
+    text-decoration: none;
+    cursor: pointer;
 }
